# waproprint

./: .gitignore  Makefile  NET.md  README.md  db_monitor.py  html2pdf3.py  html_to_continuous_pdf.py  html_to_pdf_cont.py  install.sh  pyproject.toml  requirements.txt  run_monitor.bat  run_test.bat  scan.sh  setup.py  sql2html.py  test_db_connection.py  test_playwright.py  thermal_printer.py  zpl2print.py
html2pdfs/: html_processor.py  pdf_trimmer.py  utils.py
lib/: ConfigManager.py  DatabaseManager.py  DatabaseSchemaReader.py  DocumentProcessor.py  MonitorService.py  __init__.py  check_environment.py  check_pdf_file.py  check_printer_queue.py  config.py  config_loader.py  create_new_zo.py  create_zo_from_existing.py  display_utils.py  document_printer.py  environment.py  file_handler.py  file_utils.py  format_date.py  format_number.py  get_all_printers.py  get_all_tables.py  get_default_printer.py  get_next_zo_number.py  get_printer_info.py  get_printer_ip.py  get_zo_documents.py  html_generator.py  load_config.py  log_conf.py  log_config.py  logger.py  move_to_printed.py  moved_to_printed.py  order_processor.py  order_processor2.py  pdf_generator.py  print_document.py  print_document_by_printer.py  print_tables.py  (+11 more)
tests/: test_ConfigManager.py  test_DatabaseManager.py  test_DocumentProcessor.py  test_MonitorService.py  test_order_processor2.py
zpl/: README.md  TUTORIAL.md  __init__.py  convert.py  html2zpl.py  html2zpl2pdf.py  html2zpl2print.py  html_to_zpl.py  index.html  network_printer.py  print.py  repair.py  requirements.txt  test.py  validate.py  zpl30cm.py  zpl_calculate_dimensions.py  zpl_converter.py  zpl_encoding.py  zpl_file.py  zpl_html_processor.py  zpl_parse_html.py  zpl_printer.py  zpl_render_table.py  zpl_render_text.py  zpl_text_utils.py  zpl_to_pdf.py  zpl_utilities.py  zpl_utils.py
zpl/zpl/: 12.zpl  28.zpl  8.zpl  88.zpl  etykieta_20.0cm.zpl  etykieta_20.0cm_203dpi_4.0cali.zpl  etykieta_30.0cm_300dpi_4.0cali.zpl  my_label.zpl
