[tool.poetry]
name = "waproprint"
version = "0.1.0"
description = "Waproprint project"
authors = ["Tom"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymssql = "^2.2.7"
pyodbc = ">=4.0.0"
jinja2 = ">=3.0.0"
python-dotenv = ">=0.19.0"
pdfkit = ">=1.0.0"
wand = ">=0.6.7"
reportlab = ">=3.6.8"
pypdf2 = ">=2.0.0"
html2image = ">=2.0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
